<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical"
    android:id="@+id/item_parent_layout"
    android:descendantFocusability="beforeDescendants">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:id="@+id/card_layout"
        android:background="#cdced2"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">


        <TextView
            android:id="@+id/tv_challenge_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="Challenge Name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/text_view_streak"
            android:layout_toStartOf="@+id/text_view_streak"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />


        <TextView
            android:id="@+id/text_view_day"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Days"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textAlignment="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/text_view_streak"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Streaks"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/text_view_day"
            android:layout_toStartOf="@+id/text_view_day" />

        <TextView
            android:id="@+id/text_view_day_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="36sp"
            android:textColor="@color/color_white"
            android:textAlignment="center"
            android:layout_below="@+id/text_view_streak"
            android:layout_toRightOf="@+id/text_view_streak"
            android:layout_toEndOf="@+id/text_view_streak"
            android:layout_alignRight="@+id/text_view_day"
            android:layout_alignEnd="@+id/text_view_day"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/text_view_streak_n"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="36sp"
            android:layout_alignLeft="@+id/text_view_streak"
            android:layout_alignStart="@+id/text_view_streak"
            android:layout_below="@+id/text_view_streak"
            android:layout_alignRight="@+id/text_view_streak"
            android:layout_alignEnd="@+id/text_view_streak"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>


</RelativeLayout>
