<resources>
    <string name="app_name">Champy</string>
    <string name="app_id">433222243507216</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="title_activity_duel">Duel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo">Photo</string>
    <string name="title_activity_wake_up">WakeUp</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_pending_duel">Pending Duel</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_self_improvement">SelfImprovement</string>

...
    <string name="youWantToDeleteYourAcc">You want to delete your account?</string>
    <string name="youWantCreateThisChall">You want to create this challenge?</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Challenges</item>
        <item>Profile Settings</item>
        <item>Notifications Settings</item>
        <item>Help And Feedback</item>
        <item>Terms</item>
        <item>Privacy Police</item>

...
