<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_fragment_main"
    app:layout_behavior=".FabScrollBehavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:background="@color/primary_green"
        android:fillViewport="false"
        android:minHeight="?attr/actionBarSize"
        app:tabGravity="fill"
        app:tabTextColor="#c1c1c1"
        app:tabSelectedTextColor="@color/color_white"
        app:tabIndicatorColor="@color/color_white" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:clickable="false"
        android:layout_below="@+id/tab_layout_main" />

</RelativeLayout>