...
    android:background="@color/gray">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_layout" >

            <!-- User Photo -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/iv_profile_picture_bg"
...
                android:background="#339997"
                android:id="@+id/view2"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                android:layout_below="@+id/delete_acc" />

            <!-- Simple text 'Logout' -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLogout"
                android:text="@string/logout"
                android:textColor="@color/color_white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_below="@+id/view2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
...
