<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/text_view_connect_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connect with Facebook to see\nyour friends here"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_above="@+id/login_button"
        android:layout_marginBottom="16dp" />

    <com.facebook.login.widget.LoginButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:visibility="gone"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/com_facebook_loginview_logged_in_as" />

</RelativeLayout>